--- a/style.css
+++ b/style.css
@@ -165,10 +165,10 @@ main > header > aside > .listField > .list {
   width: 100%;
   height: 90%;
   margin-top: 1.5em;
-  flex-wrap: wrap;
-  align-content: space-between;
-  flex-direction: column;
   transition: all 0.3s;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.5em;
 }
 
 main > header > aside > .listField > .list::-webkit-scrollbar {
