--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ main > header > aside > #tagList > div > .tagIngredient {
   background: #3282F7;
 }
 
-main > header > aside > #tagList > div > .tagEquipment {
+main > header > aside > #tagList > div > .tagAppareil {
   background: #68D9A4;
 }
 
@@ -131,7 +131,9 @@ main > header > aside > .listField {
   margin-right: 1rem;
   color: white;
   border-radius: 3px;
-  cursor: pointer;
+  max-width: 500px;
+  width: 87px;
+  height: 19,7px;
 }
 
 main > header > aside > .listField > span > input {
@@ -154,21 +156,18 @@ main > header > aside > .listField > span > input::placeholder {
 
 main > header > aside > .listField .fa-chevron-up {
   transform: rotate(180deg);
-  padding-right: 1rem;
+  margin-left: auto;
   cursor: pointer;
   transition: all 0.4s;
 }
 
 main > header > aside > .listField > .list {
-  display: none;
   overflow: auto;
   width: 100%;
   height: 90%;
   margin-top: 1.5em;
   transition: all 0.3s;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 0.5em;
+  display: none;
 }
 
 main > header > aside > .listField > .list::-webkit-scrollbar {
@@ -203,14 +202,14 @@ main > header > aside > #equipmentField {
   background: #68D9A4;
 }
 
-main > header > aside > #equipmentField > #equipmentList::-webkit-scrollbar-thumb {
+main > header > aside > #equipmentField > #appareilList::-webkit-scrollbar-thumb {
   background: #469e75;
   border-radius: 5px;
 }
 
-main > header > aside > #equipmentField > #equipmentList > span:hover, 
-main > header > aside > #equipmentField > #equipmentList > span:active, 
-main > header > aside > #equipmentField > #equipmentList > span:focus {
+main > header > aside > #equipmentField > #appareilList > span:hover, 
+main > header > aside > #equipmentField > #appareilList > span:active, 
+main > header > aside > #equipmentField > #appareilList > span:focus {
   color: #3e8f69;
 }
 
